--- a/london-mini-guide/src/App.css
+++ b/london-mini-guide/src/App.css
@@ -17,51 +17,63 @@ hr {
 }
 
 #cities {
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .btn-group {
   width: 80%;
   display: flex;
-  justify-content: flex-start;
+  /* justify-content: space-between; */
   margin: 0.5rem;
 }
 
-
-button {
+.button {
   height: 2.1rem;
   color: black;
   background-color: lightgrey;
-  padding: 0 .7rem 0 .7rem;
-  margin-right: auto;
-  border-radius: .2rem;
+  padding: 0 0.7rem 0 0.7rem;
+  /* margin-right: auto; */
+  border-radius: 0.2rem;
   border: none;
   box-shadow: 1px 1px;
 }
 
-button:hover {
+.button-change {
+  height: 2.1rem;
   color: white;
   background-color: #0275d8;
+  padding: 0 0.7rem 0 0.7rem;
+  /* margin-right: auto; */
+  border-radius: 0.2rem;
+  border: none;
+  box-shadow: 1px 1px;
 }
 
 table {
   display: flex;
+  flex-direction: column;
   width: 80%;
   border-collapse: collapse;
 }
 
 table:nth-child(odd) {
-  background-color: #EEEEEE;
+  background-color: #eeeeee;
 }
 
 tr {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
-}
+} 
 
 th {
- padding: .5rem auto;
- margin-right: auto;
- padding: .5rem 0 .5rem 0.5rem;
+  padding: 0.5rem auto;
+  margin-right: auto;
+  padding: 0.5rem 0 0.5rem 0.5rem;
+}
+
+td {
+  
+  margin-right: auto;
+  padding: 0.5rem 0 0.5rem 0.5rem;
 }
